# mgpu

./: .gitignore  CMakeLists.txt  README.md  README.rst  examples.html  genindex.html  gettingstarted.html  index.html  mgpu_0_1.tar.bz2  objects.inv  rationale.html  search.html  searchindex.js  tutorial.html
_sources/: examples.txt  gettingstarted.txt  index.txt  rationale.txt  tutorial.txt
bench/: CMakeLists.txt  stopwatch.cpp  stopwatch.hpp
bench/algorithm/: CMakeLists.txt  fft.cpp
bench/micro/: CMakeLists.txt  devicecopy.cu  invoke.cpp  meminfo.cu  reduce.cu
doc/: Makefile  conf.py  index.rst  make.bat
doc/_static/: nature.css
example/: CMakeLists.txt  axpy.cu  broadcast.cpp  environment.cpp  fft.cpp  invoke_kernel.cpp  simple_seg_dev_vector.cpp  simple_transfer.cpp
include/boost/: assert.hpp
include/boost/thread/: barrier.hpp
include/mgpu/: backend.hpp  blas.hpp  config.hpp.in  environment.hpp  exception.hpp  fft.hpp  invoke.hpp  invoke_kernel.hpp  seg_dev_stream.hpp  synchronization.hpp
include/mgpu/backend/: backend.hpp  blas.hpp  dev_allocation.hpp  dev_management.hpp  dev_stream.hpp  fft.hpp  host_allocation.hpp  reduce.hpp  transfer.hpp
include/mgpu/backend/cuda/: complex.hpp  cuda_call.hpp  cuda_types.hpp  dev_allocation.hpp  dev_exception.hpp  dev_management.hpp  dev_stream.hpp  host_allocation.hpp  transfer.hpp
include/mgpu/backend/cuda/blas/: blas.hpp  blas_traits.hpp  exception.hpp
include/mgpu/backend/cuda/blas/detail/: axpy.hpp  inner_prod.hpp
include/mgpu/backend/cuda/fft/: exception.hpp  fft.hpp  fft_traits.hpp
include/mgpu/backend/cuda/reduce/: reduce_block.hpp  reduce_operators.hpp
include/mgpu/blas/: blas.hpp
include/mgpu/blas/detail/: blas.ipp  blas_async.ipp
include/mgpu/container/: clone_size.hpp  dev_iterator.hpp  dev_range.hpp  dev_vector.hpp  iterator_traits.hpp  make_range.hpp  range_traits.hpp  seg_dev_iterator.hpp  seg_dev_range.hpp  seg_dev_vector.hpp  tags.hpp
include/mgpu/container/detail/: seg_dev_data_base.hpp  seg_dev_iterator.ipp  seg_dev_vector.ipp  seg_dev_vector_async.ipp
include/mgpu/container/traits/: range_traits_boost_ublas_vector.hpp  range_traits_dev_range.hpp  range_traits_dev_vector.hpp  range_traits_iterator_pair.hpp  range_traits_pointer_pair.hpp  range_traits_seg_dev_vector.hpp  range_traits_vector.hpp
include/mgpu/container/traits/detail/: range_traits_dev_range_base.hpp  range_traits_pair_base.hpp  range_traits_range_base.hpp
include/mgpu/core/: 2d.hpp  dev_allocator.hpp  dev_group.hpp  dev_id.hpp  dev_ptr.hpp  dev_ptr_pack.hpp  dev_rank.hpp  dev_set_scoped.hpp  host_opt_allocator.hpp  rank_group.hpp  ref.hpp
include/mgpu/core/detail/: group_base.hpp  queue_lockfree.hpp  queue_mutex.hpp  runtime.hpp  splitter.hpp
include/mgpu/fft/: fft.hpp
include/mgpu/fft/detail/: fft.ipp  fft_async.ipp
include/mgpu/transfer/: broadcast.hpp  copy.hpp  enable_p2p_scoped.hpp  gather.hpp  p2p_enabler.hpp  scatter.hpp
include/mgpu/transfer/detail/: copy.hpp
source/: dev_group.cpp  dev_id.cpp  dev_rank.cpp  dispatch_kernel.cpp  runtime.cpp  seg_dev_stream.cpp  synchronization.cpp
source/cuda/: dev_stream.cpp
tools/cuda/: compute_capabilities.cpp  num_devices.cpp  p2p_capabilities.cpp
unit/: CMakeLists.txt  helper_functions.hpp  sequences.hpp  test_types.hpp
unit/backend/: CMakeLists.txt  management.cpp  stream.cpp
unit/blas/: CMakeLists.txt  axpy.cpp  backend.cpp  blas.cpp  inner_prod.cpp
unit/container/: CMakeLists.txt  dev_range.cpp  dev_vector.cpp  seg_dev_iterator.cpp  seg_dev_vector.cpp
unit/core/: CMakeLists.txt  dev_group.cpp  dev_memory.cpp  dev_ptr_pack.cpp  environment.cpp  invoke.cpp  invoke_kernel.cpp  ref.cpp  splitter.cpp  synchronization.cpp
unit/fft/: CMakeLists.txt  backend.cpp  calculation.cpp  fft.cpp
unit/transfer/: CMakeLists.txt  broadcast.cpp  copy.cpp  gather.cpp  p2p_enabler.cpp  scatter.cpp
